--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/fontawesome-free-5.15.3-web/css/all.min.css" type="text/css" crossorigin="anonymous"/>
 
     <title>Bookmarks</title>
+
+    <link rel="icon" href="data:;base64,iVBORw0KGgo="/>
   </head>
 
   <body class="p-5">
