rewrite frontend using TypeScript, React Query, and Mantine

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="preload" href="/fontawesome-free-5.15.3-web/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="/static/media/lato-latin-400-normal.be36596da218e1eec01c.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 
-    <script>
-      if (localStorage.getItem('theme') == 'dark') {
-        document.documentElement.classList.add('dark')
-      }
-    </script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-
-    <link rel="stylesheet" href="/fontawesome-free-5.15.3-web/css/all.min.css" type="text/css" crossorigin="anonymous"/>
-
-    <title>Bookmarks</title>
+	<title>Bookmarks</title>
 
     <link rel="icon" href="data:;base64,iVBORw0KGgo="/>
   </head>
 
-  <body class="p-5">
+  <body class="font-copy px-5 xl:px-0 dark:bg-slate-800 dark:text-slate-200">
     <div id="app"></div>
   </body>
 </html>
