use more type inference; cosmetic changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="preload" href="./node_modules/@fontsource/lato/files/lato-latin-400-normal.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="./node_modules/@fontsource/roboto-flex/files/roboto-flex-latin-400-normal.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="./node_modules/@fontsource/roboto-condensed/files/roboto-condensed-latin-400-normal.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 
     <title>Bookmarks</title>
 
     <link rel="icon" href="data:;base64,iVBORw0KGgo="/>
   </head>
 
-  <body class="font-copy px-5 xl:px-0 dark:bg-slate-800 dark:text-slate-200">
+  <body class="font-roboto-flex px-5 xl:px-0 dark:bg-slate-800 dark:text-slate-200">
     <div id="app"></div>
 
     <script type="module" src="./src/main.tsx"></script>
