--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo="/>
   </head>
 
-  <body class="font-roboto-flex px-5 xl:px-0 dark:bg-slate-800 dark:text-slate-200">
+  <body class="font-roboto-flex dark:bg-slate-800 dark:text-slate-200">
     <div id="app"></div>
 
     <script type="module" src="./src/main.tsx"></script>
